Database updated to 88 cars, 88 cars photos added. README v1.0 file included.

--- a/final/game/templates/game/index.html
+++ b/final/game/templates/game/index.html
@@ -17,7 +17,7 @@
       'win': "{% trans 'Win'  %}",
       'guesses_per_game': "{% trans 'Guesses per game'  %}",
       'wins_1_guess': "{% trans 'Wins with 1 guess'  %}",
-      'favourite_type': "{% trans 'Favourite type'  %}",
+      'favourite': "{% trans 'Favourite'  %}",
       'torque_nm': "{% trans 'Torque (Nm)'  %}",
       'type': "{% trans type  %}",
       'all':"{% trans 'All' %}",
@@ -82,7 +82,7 @@
             <p>{% trans "Guess the CAR in 5 tries." %}</p>
             <p>{% trans "You will be shown an image of a car. Goal is to guess the exact car producer and model. You will be shown parameters of the guesses and indicating arrows to help you out with the correct answer." %}</p>  
             <p>{% trans "You can change mode by clicking on mode name." %}<p>
-            <p>{% trans "Send any bugs, suggestions for improvement or new feature/mode request to " %} xyz@gmail.com</p>
+            <p>{% trans "Send any bugs, suggestions for improvement or new feature/mode request to " %} sawinskif@gmail.com</p>
         </div>
       </div>
     </div>
@@ -132,7 +132,7 @@
                 <a class="mode-changer" href="{% url 'switch_units' 'imperial' %}">{% trans "Set imperial units" %}</a>
                 {% endif %}
               </div>
-              <p class="border-top">{% trans "Send suggestions/bugs: " %} xyz@gmail.com</p>
+              <p class="border-top">{% trans "Send suggestions/bugs: " %} sawinski@gmail.com</p>
             </div>
           </div>
         </div>
